# talk-space

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  DockerFile  README.md  app_entrypoint.sh  docker-compose.yml  entrypoint.sh  makefile  pyproject.toml
backend/deployment/: cluster.yml
backend/deployment/app/: deployment.yml  service.yml
backend/deployment/celery_default/: deployment.yml
backend/deployment/celery_heartbeat/: deployment.yml
backend/deployment/db/: deployment.yml  pv.yml  pvc.yml  service.yml
backend/deployment/redis/: deployment.yml  pv.yml  pvc.yml  service.yml
backend/deployment/redis_listener/: deployment.yml
backend/src/accounts/: helpers.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/src/accounts/migrations/: 0001_initial.py
backend/src/chat/: services.py  urls.py  views.py
backend/src/core/: celery.py  settings.py  urls.py
backend/src/helpers/: const.py  custom_exception.py  utils.py
backend/src/inbox/: models.py  serializers.py  services.py  urls.py  views.py
backend/src/inbox/migrations/: 0001_initial.py  0002_remove_message_is_delivered_remove_message_is_failed_and_more.py  0003_rename_last_message_timestamp_inbox_last_message_timestamp_old.py  0004_remove_inbox_last_message_timestamp_old.py  0005_inbox_last_message_timestamp.py  0006_remove_inbox_created_by_alter_messagestatus_table.py  0007_inbox_created_by.py  0008_alter_inbox_created_by.py  0009_inbox_last_message_sender.py  0010_rename_group_name_inbox_inbox_name_and_more.py  (+2 more)
(+59 files in other folders)
